--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -9,13 +9,34 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
-
+	.button
+		font-size: 18px
+	.buttoncase
+		grid-column: 1 / 4
+	.header-title
+		font-size: 50px
+		line-height: 1.3
+	.portfolio-section
+		grid-template-columns: repeat(3, 1fr)
+	.portfolio-item
+		min-height: 40vh
+		&:nth-child(4)
+			grid-column: 2 / 4
+		&:nth-child(5)
+			grid-column: 1 / 3
+			grid-row: initial
+		&:nth-child(6)
+			grid-column: initial
+			grid-row: initial
+	.portfolio-item__title
+		font-size: 16px
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	/**/
-
+	.header-content
+		padding: 40px 20px
+	.header-title
+		font-size: 50px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
