--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -113,7 +113,7 @@
     &:hover
         color: $accent
         &::before
-            opacity: .85
+            opacity: .45
     &::before
         content: ''
         position: absolute
@@ -122,7 +122,7 @@
         right: 0
         bottom: 0
         background-color: $dark
-        opacity: .65
+        opacity: .0
         transition: opacity .5s ease
     > *
         z-index: 1
@@ -137,6 +137,7 @@
 .portfolio-item__title
     font-size: 20px
     font-weight: 600
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
 
 .buttoncase
     grid-column: 1 / 5
