--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -77,7 +77,7 @@
 
     background-color: $accent
 
-.button-grey
+.button--grey
     background-color: $gray
     &::after
         background-color: darken($gray, 15%)
@@ -111,9 +111,9 @@
     border-radius: 15px
     overflow: hidden
     &:hover
-        color: $accent
+        //color: $accent
         &::before
-            opacity: .45
+            opacity: .40
     &::before
         content: ''
         position: absolute
@@ -137,7 +137,7 @@
 .portfolio-item__title
     font-size: 20px
     font-weight: 600
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    text-shadow: 0 0 10px rgb(0 0 0), 0 0 5px black
 
 .buttoncase
     grid-column: 1 / 5
@@ -146,7 +146,7 @@
 .landing-section
     padding: 80px 0
 
-.section-ready
+.ready-section
     background-color: $light
     .container
         grid-template-columns: 1fr 1fr
@@ -159,14 +159,14 @@
         bottom: 60px
         right: 60px
 
-.title__ready-left
+.ready-left__title
     margin-top: 0 
     margin-bottom: 40px 
 
 .ready-right
     padding-left: 40px
 
-.formsection
+.form-section
     padding: 30px 0
     background-color: $dark
 
@@ -186,7 +186,7 @@
     padding: 14.5px
     width: 100%
 
-.section-blog
+.blog-section
     margin: 0
     &__title
         margin:
@@ -243,7 +243,7 @@
     text-align: center
     color: darken($light, 50%)
 
-.footer__logo
+.main-footer__logo
     font-family: intro-grid
     font-size: 26px
     line-height: 1.16
