--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -41,8 +41,18 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
-
+	.portfolio-section
+		grid-template-columns: 1fr
+	.portfolio-item
+		min-height: 50vh
+		&:nth-child(1)
+			grid-column: initial
+		&:nth-child(4)
+			grid-column: initial
+		&:nth-child(5)
+			grid-column: initial
+	.buttoncase
+		grid-column: 1 / 2
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
