--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -5,7 +5,7 @@
 @font-face
 	font-family: 'raleway-grid'
 	src: url('../fonts/RalewayBold.woff') format('woff')
-	font-weight: bold
+	font-weight: 700
 
 @font-face
 	font-family: 'raleway-grid'
