adaptive redy-section

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -39,6 +39,22 @@
 	.header-title
 		font-size: 50px
 
+	.landing-section
+		padding: 60px 0
+
+	.ready-section
+		.container
+			grid-template-columns: 1fr
+			> div
+				padding: 0 8%
+
+	.ready-left
+		border: none
+	.ready-left__title
+		text-align: center
+		font-size: 26px
+		margin-bottom: 26px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	.portfolio-section
