--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -158,10 +158,11 @@
         top: 60px
         bottom: 60px
         right: 60px
-
-.ready-left__title
-    margin-top: 0 
-    margin-bottom: 40px 
+    &__title
+        margin-top: 0 
+        margin-bottom: 40px 
+    &__title-desc
+        display: block
 
 .ready-right
     padding-left: 40px
