--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -4,14 +4,22 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
-	/**/
-
+	.blog-home
+		grid-template-columns: repeat(3, 1fr)
+		&__buttoncase
+			grid-column: 1 / 4
+	.blog-item
+		&:nth-child(3)
+			grid-column: 3
+		&:nth-child(4)
+			grid-column: 1
+	
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	.button
 		font-size: 18px
-	.buttoncase
+	.portfolio-section__buttoncase
 		grid-column: 1 / 4
 	.header-title
 		font-size: 50px
@@ -31,6 +39,10 @@
 	.portfolio-item__title
 		font-size: 16px
 
+	.blog-home
+		grid-template-columns: repeat(2, 1fr)
+		&__buttoncase
+			grid-column: 1 / 3
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -55,8 +67,13 @@
 		font-size: 26px
 		margin-bottom: 26px
 
+	.form
+		grid-template-columns: 1fr 1fr
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
+	.header-content__title
+		font-size: 40px
 	.portfolio-section
 		grid-template-columns: 1fr
 	.portfolio-item
@@ -69,6 +86,9 @@
 			grid-column: initial
 	.buttoncase
 		grid-column: 1 / 2
+
+	.form
+		grid-template-columns: 1fr
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
