--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -10,9 +10,11 @@
 			grid-column: 1 / 4
 	.blog-item
 		&:nth-child(3)
-			grid-column: 3
+			grid-column: 2 / 3
+			grid-row: 1
 		&:nth-child(4)
-			grid-column: 1
+			grid-column: 1 / 2
+			grid-row: 2
 	
 
 /* Medium Devices, Desktops */
