--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -4,10 +4,12 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
+	
 	.blog-home
 		grid-template-columns: repeat(3, 1fr)
 		&__buttoncase
 			grid-column: 1 / 4
+	
 	.blog-item
 		&:nth-child(3)
 			grid-column: 2 / 3
@@ -19,15 +21,20 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
+	
 	.button
 		font-size: 18px
+	
 	.portfolio-section__buttoncase
 		grid-column: 1 / 4
-	.header-title
+	
+	.header-content__title
 		font-size: 50px
 		line-height: 1.3
+	
 	.portfolio-section
 		grid-template-columns: repeat(3, 1fr)
+	
 	.portfolio-item
 		min-height: 40vh
 		&:nth-child(4)
@@ -38,6 +45,7 @@
 		&:nth-child(6)
 			grid-column: initial
 			grid-row: initial
+	
 	.portfolio-item__title
 		font-size: 16px
 
@@ -48,10 +56,14 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
+	
+	.title
+		text-align: center
+	
 	.header-content
 		padding: 40px 20px
-	.header-title
-		font-size: 50px
+		&__title
+			font-size: 50px
 
 	.landing-section
 		padding: 60px 0
@@ -64,20 +76,34 @@
 
 	.ready-left
 		border: none
+	
 	.ready-left__title
-		text-align: center
 		font-size: 26px
 		margin-bottom: 26px
 
 	.form
 		grid-template-columns: 1fr 1fr
 
+	.blog-home
+		grid-template-columns: 1fr
+		&__buttoncase
+			grid-column: 1 / 2
+
+	.blog-item
+		&:nth-child(3)
+			grid-column: initial
+		&:nth-child(4)
+			grid-column: initial
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
+	
 	.header-content__title
 		font-size: 40px
+	
 	.portfolio-section
 		grid-template-columns: 1fr
+	
 	.portfolio-item
 		min-height: 50vh
 		&:nth-child(1)
@@ -86,11 +112,18 @@
 			grid-column: initial
 		&:nth-child(5)
 			grid-column: initial
+	
 	.buttoncase
 		grid-column: 1 / 2
 
 	.form
 		grid-template-columns: 1fr
+
+	.main-footer
+		padding: 40px 0
+
+	.footer-copy
+		margin-top: 10px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
