--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -40,6 +40,7 @@
 .button
     display: inline-block
     border: none
+    letter-spacing: .05em
     color: #fff
     text-decoration: none
     padding: 10px 60px
@@ -190,6 +191,7 @@
     font-size: 17px
     padding: 14.5px
     width: 100%
+    white-space: nowrap
 
 .blog-section
     margin: 0
