add mather portfolio

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -183,6 +183,9 @@
     grid-template-columns: repeat(4, 1fr)
     grid-gap: $gutter
 
+    &__label
+        display: none
+
 .form__input
     background-color: lighten($dark, 6%)
     border-radius: $bradius
