change background color and more min correct

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,6 +2,7 @@ $accent: orangered
 $light: #EDEDED
 $dark: #293A43
 $dark: #404045
+$dark: #020914
 $gray: #4B5A65
 $gutter: 20px
-$bradius: 20px
+$bradius: 10px
