--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -95,8 +95,8 @@
 .portfolio-section
     padding: 10px
     grid-template-columns: repeat(4, 1fr)
-    grid-gap: 10px
-    background-color: darken($dark, 10%)
+    grid-gap: 15px
+    //background-color: $dark
     //grid-gap: 0
 
 .portfolio-item
