--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -27,6 +27,14 @@ input, textarea
 	font-style: italic
 	transition: background-color .25s ease
 
+img
+	display: block
+	max-width: 100%
+	height: auto
+
+button
+	cursor: pointer
+
 .img-responsive
 	display: block
 	max-width: 100%
