--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -156,7 +156,7 @@
         grid-template-columns: 1fr 1fr
         //background-image: url(../img/DmitriyFox12_foxCharacter.webp)
         background-size: cover
-        background-position: right
+        background-position: center
 
 .ready-left
     border-right: 1px solid #dadada
