work on the tag in heder

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,3 +1,4 @@
+@import "normalize"
 @import "fonts"
 @import "libs"
 @import "base"
@@ -21,7 +22,7 @@
         right: 0
         bottom: 0
         background-color: $dark
-        opacity: .92
+        opacity: .80
 
 .header-content
     padding: 60px $gutter
@@ -96,7 +97,7 @@
     padding: 10px
     grid-template-columns: repeat(4, 1fr)
     grid-gap: 15px
-    //background-color: $dark
+    background-color: $dark
     //grid-gap: 0
 
 .portfolio-item
