--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -37,6 +37,15 @@ button
 ul, li
 	margin: 0
 	style-list: none
+	margin-block-start: 0
+	margin-block-end: 0
+	margin-inline-start: 0
+	margin-inline-end: 0
+	padding-inline-start: 0
+
+picture
+	display: block
+	max-width: 100%
 
 .img-responsive
 	display: block
