--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -33,10 +33,11 @@ img
 
 button
 	cursor: pointer
+	border: none
 
 ul, li
 	margin: 0
-	style-list: none
+	list-style: none
 	margin-block-start: 0
 	margin-block-end: 0
 	margin-inline-start: 0
