--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -199,7 +199,7 @@
         display: none
 
 .form__input
-    background-color: lighten($dark, 6%)
+    background-color: darken($light, 20%)
     border-radius: $bradius
     &::placeholder
         color: lighten($dark, 25%)
