--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -14,12 +14,9 @@
     background-position: center
     position: relative
     align-items: center
-    /* Фолбэк */
-    background-image: url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg')
-    /* Для Chrome и Safari */
-    background-image: -webkit-image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') 1x)
-    /* Для Firefox */
-    background-image: image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4.avif') type('image/avif') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4.webp') type('image/webp') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4.jpg') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 1x)
+    overflow: hidden
+    animation: change 10s infinite ease-in-out
+    //animation-direction: alternate
 
     &::before
         content: ''
@@ -31,6 +28,50 @@
         background-color: $dark
         opacity: .80
 
+@keyframes change
+    0%
+        /* Фолбэк */
+        background-image: url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg')
+        /* Для Chrome и Safari */
+        background-image: -webkit-image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') 1x)
+        /* Для Firefox */
+        background-image: image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 1x)
+    20%
+        /* Фолбэк */
+        background-image: url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.jpg')
+        /* Для Chrome и Safari */
+        background-image: -webkit-image-set(url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.webp') 1x)
+        /* Для Firefox */
+        background-image: image-set(url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.avif') type('image/avif') 2x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.avif') type('image/avif') 1x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.webp') type('image/webp') 2x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.webp') type('image/webp') 1x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.jpg') 2x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.jpg') 1x)
+    40%
+        /* Фолбэк */
+        background-image: url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.jpg')
+        /* Для Chrome и Safari */
+        background-image: -webkit-image-set(url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.webp') 1x)
+        /* Для Firefox */
+        background-image: image-set(url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.avif') type('image/avif') 2x, url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.avif') type('image/avif') 1x, url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.webp') type('image/webp') 2x, url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.webp') type('image/webp') 1x, url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.jpg') 2x, url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.jpg') 1x)
+    60%
+        /* Фолбэк */
+        background-image: url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.jpg')
+        /* Для Chrome и Safari */
+        background-image: -webkit-image-set(url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.webp') 1x)
+        /* Для Firefox */
+        background-image: image-set(url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.avif') type('image/avif') 2x, url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.avif') type('image/avif') 1x, url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.webp') type('image/webp') 2x, url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.webp') type('image/webp') 1x, url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.jpg') 2x, url('../img/main/DimaFox1_Old_empty_scroll_ultra_detailed_sepia_tone_x1600.jpg') 1x)
+    80%
+        /* Фолбэк */
+        background-image: url('../img/main/c45ba5c7-cc3a-x1600.jpg')
+        /* Для Chrome и Safari */
+        background-image: -webkit-image-set(url('../img/main/c45ba5c7-cc3a-x1600.webp') 1x)
+        /* Для Firefox */
+        background-image: image-set(url('../img/main/c45ba5c7-cc3a-x1600.avif') type('image/avif') 2x, url('../img/main/c45ba5c7-cc3a-x1600.avif') type('image/avif') 1x, url('../img/main/c45ba5c7-cc3a-x1600.webp') type('image/webp') 2x, url('../img/main/c45ba5c7-cc3a-x1600.webp') type('image/webp') 1x, url('../img/main/c45ba5c7-cc3a-x1600.jpg') 2x, url('../img/main/c45ba5c7-cc3a-x1600.jpg') 1x)
+    100%
+        /* Фолбэк */
+        background-image: url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.jpg')
+        /* Для Chrome и Safari */
+        background-image: -webkit-image-set(url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.webp') 1x)
+        /* Для Firefox */
+        background-image: image-set(url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.avif') type('image/avif') 2x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.avif') type('image/avif') 1x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.webp') type('image/webp') 2x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.webp') type('image/webp') 1x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.jpg') 2x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.jpg') 1x)
+
 .header-content
     padding: 60px $gutter
     z-index: 1
@@ -40,7 +81,7 @@
     &__img
         width: 100%
 
-.header-content .button
+.header-buttons__btn
     margin: 10px
 
 .header-content__title
