first make git branch css-slider

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -11,12 +11,18 @@
 .main_header
     min-height: 100vh
     background-size: cover
-    background-position: center
+    background-position: center center
+    background-repeat: no-repeat
     position: relative
     align-items: center
     overflow: hidden
-    animation: change 10s infinite ease-in-out
-    //animation-direction: alternate
+    /* Фолбэк */
+    background-image: url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg')
+    /* Для Chrome и Safari */
+    background-image: -webkit-image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') 1x)
+    /* Для Firefox */
+    background-image: image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 1x)
+    animation: bgSliderAnimation 36s infinite linear alternate 0s
 
     &::before
         content: ''
@@ -26,9 +32,22 @@
         right: 0
         bottom: 0
         background-color: $dark
-        opacity: .80
+        opacity: .7
 
-@keyframes change
+@keyframes bgSliderAnimation
+    0%
+        opacity: 0
+        animation-timing-function: ease-in
+    8%
+        opacity: 1
+        animation-timing-function: ease-out
+    17%
+        opacity: 1
+    25%
+        opacity: 0
+    100%
+        opacity: 0
+
     0%
         /* Фолбэк */
         background-image: url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg')
@@ -77,12 +96,15 @@
     z-index: 1
     text-align: center
     color: #fff
+    text-shadow: 0 0 30px black, 0 0 40px black
 
     &__img
         width: 100%
 
 .header-buttons__btn
     margin: 10px
+    text-shadow: none
+    box-shadow: 4px 4px 20px 0px rgb(0 0 0 / 50%)
 
 .header-content__title
     font-family: intro-grid, sans-serif
