--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,8 +16,7 @@
     position: relative
     align-items: center
     overflow: hidden
-    opacity: 0
-    //z-index: 0
+    //opacity: 0
 
     /* Фолбэк */
     background-image: url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg')
@@ -25,96 +24,83 @@
     background-image: -webkit-image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') 1x)
     /* Для Firefox */
     background-image: image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 1x)
-    animation: bgSliderAnimation 36s linear infinite 0s
+    animation: bgSliderAnimation 12s linear infinite 0s
 
     &::before
         content: ''
         position: absolute
-        top: 0px
-        left: 0px
+        top: 0
+        left: 0
         right: 0
         bottom: 0
         background-color: $dark
         opacity: .7
 
-@keyframes bgSliderAnimation
+    &::after
+        content: ''
+        position: absolute
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
+        background-color: $dark
+        background-color: green
+        opacity: 0
+        animation: --afterSliderAnimation 12s linear infinite 0s
+
+@keyframes -------afterSliderAnimation
+    // 4%, 16%, 24%, 36%, 44%, 56%, 64%, 76%, 84%, 96%
+    //     opacity: 0
+
+    // 0%, 2%, 18%, 22%, 38%, 42%, 58%, 62%, 78%, 82%, 98%
+    //     opacity: 1
+
     0%
-        opacity: 0
-        animation-timing-function: ease-in
-    4%
         opacity: 1
-        animation-timing-function: ease-out
-    8%
+    2%
         opacity: 1
-    12%
+    3%
         opacity: 0
-    16%
+    18%
         opacity: 0
+    19%
+        opacity: 1
+    22%
+        opacity: 1
+    23%
+        opacity: 0
+    38%
+        opacity: 0
+    39%
+        opacity: 1
+    42%
+        opacity: 1
+    43%
+        opacity: 0
+    58%
+        opacity: 0
+    59%
+        opacity: 1
+    62%
+        opacity: 1
+    63%
+        opacity: 0
+    78%
+        opacity: 0
+    79%
+        opacity: 1
+    82%
+        opacity: 1
+    83%
+        opacity: 0
+    98%
+        opacity: 0
+    99%
+        opacity: 1
+    100%
+        opacity: 1
 
-    16%
-        opacity: 0
-        animation-timing-function: ease-in
-    20%
-        opacity: 1
-        animation-timing-function: ease-out
-    24%
-        opacity: 1
-    28%
-        opacity: 0
-    32%
-        opacity: 0
-
-    32%
-        opacity: 0
-        animation-timing-function: ease-in
-    36%
-        opacity: 1
-        animation-timing-function: ease-out
-    40%
-        opacity: 1
-    44%
-        opacity: 0
-    48%
-        opacity: 0
-
-    48%
-        opacity: 0
-        animation-timing-function: ease-in
-    52%
-        opacity: 1
-        animation-timing-function: ease-out
-    56%
-        opacity: 1
-    60%
-        opacity: 0
-    64%
-        opacity: 0
-
-    64%
-        opacity: 0
-        animation-timing-function: ease-in
-    68%
-        opacity: 1
-        animation-timing-function: ease-out
-    72%
-        opacity: 1
-    76%
-        opacity: 0
-    80%
-        opacity: 0
-
-    80%
-        opacity: 0
-        animation-timing-function: ease-in
-    84%
-        opacity: 1
-        animation-timing-function: ease-out
-    88%
-        opacity: 1
-    92%
-        opacity: 0
-    96%
-        opacity: 0
+@keyframes bgSliderAnimation
 
     0%
         /* Фолбэк */
@@ -123,6 +109,7 @@
         background-image: -webkit-image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') 1x)
         /* Для Firefox */
         background-image: image-set(url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.avif') type('image/avif') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.webp') type('image/webp') 1x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 2x, url('../img/main/FoxD10_a_home_for_all_the_critters_of_the_forest_big_tree_tall__4x1600.jpg') 1x)
+        animation: fadeItem linear infinite
     20%
         /* Фолбэк */
         background-image: url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.jpg')
@@ -131,6 +118,7 @@
         /* Для Firefox */
         background-image: image-set(url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.avif') type('image/avif') 2x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.avif') type('image/avif') 1x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.webp') type('image/webp') 2x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.webp') type('image/webp') 1x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.jpg') 2x, url('../img/main/DimaFox22_A_ancient_magical_forest_tall_pink_trees_moonlit_x1600.jpg') 1x)
         //animation-delay: 6s
+
     40%
         /* Фолбэк */
         background-image: url('../img/main/DmitriyFox12_Cute_baby_fox_big_eyes_Pixar_Dreamworks_Character_x1600.jpg')
@@ -167,12 +155,34 @@
         background-image: image-set(url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.avif') type('image/avif') 2x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.avif') type('image/avif') 1x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.webp') type('image/webp') 2x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.webp') type('image/webp') 1x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.jpg') 2x, url('../img/main/gazdima5_nausicca_of_the_valley_of_the_wind_in_the_style_of_hor_x1600.jpg') 1x)
         //animation-delay: 30s
 
+@keyframes fadeItem
+    0%
+        opacity: 0
+        animation-timing-function: ease-in
+    8%
+        opacity: 1
+        animation-timing-function: ease-out
+    17%
+        opacity: 1
+    25%
+        opacity: 0
+    100%
+        opacity: 0
+
 .header-content
     padding: 60px $gutter
+    justify-content: ceneter
     z-index: 1
     text-align: center
     color: #fff
     text-shadow: 0 0 30px black, 0 0 40px black
+
+    &__title
+        font-family: intro-grid, sans-serif
+        font-size: 60px
+        font-weight: normal
+        margin: 20px 0
+        line-height: 1.5
 
     &__img
         width: 100%
@@ -181,13 +191,6 @@
     margin: 10px
     text-shadow: none
     box-shadow: 4px 4px 20px 0px rgb(0 0 0 / 50%)
-
-.header-content__title
-    font-family: intro-grid, sans-serif
-    font-size: 60px
-    font-weight: normal
-    margin: 20px 0
-    line-height: 1.5
 
 .button
     display: inline-block
@@ -204,7 +207,8 @@
     outline: none
     transition: background-color .1s ease
     cursor: pointer
-    //&::after
+    background-color: $accent
+    &::after
         transition: background-color .2s ease
         position: absolute
         content: ''
@@ -226,22 +230,22 @@
     &:active
         background-color: darken($accent, 5%)
         &::after
-            opacity: .32       
-
-    background-color: $accent
-
-.button--grey
-    background-color: $gray
-    &::after
-        background-color: darken($gray, 15%)
-    &:hover
-        background-color: lighten($gray, 5%)
-        &::after
-            opacity: .22
-    &:active
-        background-color: darken($gray, 5%)
-        &::after
             opacity: .32
+
+            background-color: $accent
+
+    &--grey
+        background-color: $gray
+        &::after
+            background-color: darken($gray, 15%)
+        &:hover
+            background-color: lighten($gray, 5%)
+            &::after
+                opacity: .22
+        &:active
+            background-color: darken($gray, 5%)
+            &::after
+                opacity: .32
 
 .portfolio-section
     padding: 10px
@@ -297,7 +301,7 @@
     padding: $gutter $gutter 50px
 
 .landing-section
-    padding: 
+    padding:
         top: 200px
         bottom: 100px
 
@@ -314,8 +318,8 @@
     padding:
         right: 40px
     &__title
-        margin-top: 0 
-        margin-bottom: 40px 
+        margin-top: 0
+        margin-bottom: 40px
     &__title-desc
         display: block
         font-weight: normal
@@ -399,10 +403,10 @@
             margin: 0
             transition: color .25s ease
         &__text
-            margin: 
+            margin:
                 top: 20px
                 bottom: 0
-    
+
 .main-footer
     padding: 60px 0
     background-color: darken($dark, 8%)
